wp-content/themes/freedombeat/style.css
/* ... */
.symbol, a.symbol:before {
    font-family: 'Mono Social Icons Font';
    -webkit-text-rendering: optimizeLegibility;
    -moz-text-rendering: optimizeLegibility;
    -ms-text-rendering: optimizeLegibility;
    -o-text-rendering: optimizeLegibility;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-font-smoothing: antialiased;
    -ms-font-smoothing: antialiased;
    -o-font-smoothing: antialiased;
    font-smoothing: antialiased;
}

a.symbol:before {
    content: attr(title);
    margin-right: 0.3em;
    font-size: 130%;
}

::selection {
  background: #fbd500;
}

body {
  font-size: 15px;
  font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
}

body, #headerwrap, #footer, #slider-wrapper-iframe, #slider-wrapper {
  background: #2f3032 !important;
}

#logo .tagline {
  color: #b4b7bb;
  display: block;
  text-transform: uppercase;
  font-style: italic;
  margin-left: 0.65em;
  margin-top: -1em;
}

header, footer, .sidebar {
  color: #fff;
}


#headerwrap, #footer, #slider-wrapper-iframe, #slider-wrapper {
  background: #1E1E20 url(images/bg16.png) repeat 0 0 !important;
}

a {
  color:#b61f62;
}

#logo a, .recentborder, .item4 .recentborder, .item3 .recentborder, .one_third .recentborder, .afterlinehome, .TopHolder, .borderLineLeftSlideshow, .cartHolder{
  border-color: #b61f62 !important;
}

#logo {
  margin: 21px 0 2px 0px;
}

#slider-wrapper {
  top: 115px;
}

.titleborder {
  border-bottom: 2px dashed #DADADA;
}

.homeRacent h3 a, .item4 h3, .item4 h3 a, .boxdescwraper h2, #footer .widget h3, .socialfooter h3, .widget h3, .item3 h3, .one_third h3, #portitems2 h3, h3#comments, .relatedtitle h3, .content ol.commentlist li .comment-author .fn a, #commentform h3, .projectdescription h2, .team .title, .recentdescription h3 {
  font-family: Oswald !important;
}

.menu > li a, .widget_nav_menu ul li a, .widgett a, input[type='text'], input[type='submit'], input[type='reset'],
.menu li ul li a, .item4 h4 a, #portitems2 .category a, .homeRacent .category a, 
.item3 h4 a, .one_third h4 a, .homeRacent .productF h3.category, .homeRacent .productR h3.category
 {
  font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif !important;
}

.menu > li a strong {
    text-transform: uppercase;
    color: #e07ca8;
    font-weight: 200;
    border-top: solid 2px transparent;
    border-bottom: solid 2px transparent;
}

.menu > li.current-menu-item a strong, .menu > li a strong:hover {
  border-color: #fbd500;
}

#slider-wrapper {
  top: 115px;
}

.iosSlider .slider {
  padding-top: 280px;
}

.iosSlider .slider .item, .container {
  background: #fff;
  border: 1px solid #fff;
}

.titleborder {
  border-bottom: 2px dashed #DADADA;
}

.home #mainwrap {
  top: 90px;
}

.homeRacent.post h3 {
  background: none;
  width: 32px;
  height: 32px;
  margin: 0px 0 10px 0px;
  width: 100%;
}

.homeRacent.post h3 a {
  color: #000;
  padding: 0;
}

.gototop {
  background: #b61f62;
}
.advertise .bx-wrapper:hover .bx-next {
background: #B61F62 url(images/slideshowArrowForwardWhite.png) no-repeat 0px 1px;
}

.advertise .bx-wrapper:hover .bx-prev {
background: #B61F62 url(images/slideshowArrowBackwardWhite.png) no-repeat 0px 1px;
}

#footer {
  border-color: #fbd500 !important;
}

#footerbwrap {
  background: #fbd500;
}

#footerb {
  color: #171717;
}

.facebooklink.top {
  background: url(images/top-facebookIcon.png) no-repeat 1px 2px;
}

#footer .widget h3, .widget h3  {
  color: #fbd500;
  text-transform: uppercase;
}

#footer .widget_tag_cloud a, .widget_tag_cloud a {
  background-color: #b61f62;
}

#footer .widget_tag_cloud a:hover, .widget_tag_cloud a:hover {
  background-color: #6d123a !important;
}

#footer .product_list_widget li del, #footer .widget del span, .footer_widget h3 span, .catlinkhover, .item h3 a:hover, .item2 h3 a:hover, .item4 h3 a:hover, .catlink:hover, .infotext span, .homeRacent h3 a:hover, .item4 h4 a:hover, .tags a:hover, .blogpost .link:hover, .blogpost .postedin:hover, .blogpost .postedin:hover, .blogpost .link a:hover, .blogpostcategory a.textlink:hover, .footer_widget .widget_links ul li a:hover, .footer_widget .widget_categories ul li a:hover, .footer_widget .widget_archive ul li a:hover, #footerb .footernav ul li a:hover, .footer_widget ul li a:hover, .tags span a:hover, .more-link:hover, .showpostpostcontent h1 a:hover, .menu li a:hover, .menu li a:hover strong, .menu li ul li:hover ul li:hover a, .menu > li.current-menu-item a strong, .menu > li.current-menu-ancestor a strong, .blogpostcategory .meta .written:hover a, .blogpostcategory .meta .comments:hover a, #wp-calendar a, .widgett a:hover, .widget_categories li.current-cat a, .widget_categories li.current-cat, .blogpostcategory .meta .time a:hover, .homeRacent h2 span, .advertise h2 span, .related h3 span, .homeremove .catlink .sortingword:hover, .homeremove .catlinkhover .sortingword, .blogpost .datecomment .link a, .titleborderh span, .textSlide .box, .widget_login p a:hover, .priceSP ins, .boxmore a:hover, .homeRacent .productF h3.category, .textSlide .salePrice1 a, .textSlide .salePrice2 a, .textSlide .salePrice3 a, .textSlide span, .homeRacent .recentmore:hover, .widget_login p a:hover, .priceSP ins, .cartTopDetails .product_list_widget li a:hover, .top-nav li a:hover, #footer .widget .wttitle h4 a, .widget .wttitle h4 a {
  color:#e07ca8 !important;
}

#footer .widget .wttitle h4 a:hover, .widget .wttitle h4 a:hover, .widget a {
  color: #FFF !important;
}

#footer .widget_categories a, #footer .widget_archive a, #footer .widget_pages a, #footer .widget_links a, #footer .widget_recent_entries a, #footer #footer .widget_meta a, #footer .widget_nav_menu a, #footer .widget_rss a, .widget_categories a {
  background: url(images/bulletSidebar.png) no-repeat 2px 3px;
}

.recent_posts .widgett img, .category_posts .widgett img {
  background: #fff !important;
}
/* ... */

